--- a/Calculator/Views/MainWindow.xaml
+++ b/Calculator/Views/MainWindow.xaml
@@ -30,73 +30,74 @@
                     <ControlTemplate TargetType="{x:Type Window}">
                         <!--Outer border with the drop shadow margin-->
                         <Border Padding="{Binding OuterMarginSizeThickness, FallbackValue=10}">
+                            <!--Window outline-->
+                            <Grid>
+                                <!--Window background and border-->
+                                <Border Background="{StaticResource Window.Background}" BorderBrush="{StaticResource Window.Border}" BorderThickness="1">
+                                    <!--Window shadow-->
+                                    <Border.Effect>
+                                        <DropShadowEffect Color="{StaticResource Window.Shadow}"  ShadowDepth="0" Opacity="0.5"/>
+                                    </Border.Effect>
 
-                            <!--Window border, shadow and main background-->
-                            <Border Background="{StaticResource Window.Background}" BorderBrush="{StaticResource Window.Border}" BorderThickness="1">
-                                <Border.Effect>
-                                    <DropShadowEffect Color="{StaticResource Window.Shadow}"  ShadowDepth="0" Opacity="0.5"/>
-                                </Border.Effect>
+                                    <!--Window contents-->
+                                    <Grid>
+                                        <Grid.RowDefinitions>
+                                            <!--Title bar-->
+                                            <RowDefinition Height="{Binding TitleHeightGridLength, FallbackValue=26}"/>
+                                            <!--Main content-->
+                                            <RowDefinition Height="*"/>
+                                        </Grid.RowDefinitions>
 
-                                <!--Main window content-->
-                                <Grid>
-                                    <Grid.RowDefinitions>
                                         <!--Title bar-->
-                                        <RowDefinition Height="{Binding TitleHeightGridLength, FallbackValue=26}"/>
-                                        <!---->
-                                        <RowDefinition Height="40"/>
-                                        <!--Window content-->
-                                        <RowDefinition Height="*"/>
-                                    </Grid.RowDefinitions>
+                                        <Grid Grid.Row="0">
+                                            <Grid.ColumnDefinitions>
+                                                <!--Title-->
+                                                <ColumnDefinition Width="*"/>
+                                                <!--Window control buttons-->
+                                                <ColumnDefinition Width="auto"/>
+                                            </Grid.ColumnDefinitions>
 
-                                    <!--Title bar-->
-                                    <Grid Grid.Row="0">
-                                        <Grid.ColumnDefinitions>
                                             <!--Title-->
-                                            <ColumnDefinition Width="*"/>
-                                            <!--Window buttons-->
-                                            <ColumnDefinition Width="auto"/>
-                                        </Grid.ColumnDefinitions>
-
-                                        <!--Title-->
-                                        <TextBlock 
+                                            <TextBlock 
                                             Text="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Title, FallbackValue=Calculator}" 
                                             VerticalAlignment="Center"
                                             Margin="12, 0, 0, 0"/>
 
-                                        <!--Window buttons-->
-                                        <StackPanel Grid.Column="1" Orientation="Horizontal">
-                                            <Button 
+                                            <!--Window control buttons-->
+                                            <StackPanel Grid.Column="1" Orientation="Horizontal">
+                                                <!--Minimize button-->
+                                                <Button 
                                                 Content="‒" 
                                                 Command="{Binding MinimizeCommand}" 
                                                 Style="{StaticResource BaseWindowControlButtonStyle}" 
                                                 FontSize="22" 
                                                 Padding="0,-4,0,0"/>
-                                            <Button 
+
+                                                <!--Maximize button-->
+                                                <Button 
                                                 Content="□" 
                                                 Command="{Binding MaximizeCommand}" 
                                                 Style="{StaticResource BaseWindowControlButtonStyle}" 
                                                 FontSize="21" 
                                                 Padding="0,-6,0,0"/>
-                                            <Button 
+
+                                                <!--Close button-->
+                                                <Button 
                                                 Content="×" 
                                                 Command="{Binding CloseCommand}" 
                                                 Style="{StaticResource WindowCloseControlButtonStyle}" 
-                                                FontSize="23" 
+                                                FontSize="24" 
                                                 Padding="0,-4,0,0"/>
-                                        </StackPanel>
-                                    </Grid>
+                                            </StackPanel>
+                                        </Grid>
 
-                                    
-                                    
-                                    <!--Window content-->
-                                    <!--Keyboard and display are displayed here-->
-                                    <Border Grid.Row="2" Padding="3">
+                                        <!--Main content-->
                                         <ContentControl Grid.Row="1">
                                             <local:StandartCalculatorControl/>
                                         </ContentControl>
-                                    </Border>
-                                </Grid>
-                            </Border>
+                                    </Grid>
+                                </Border>
+                            </Grid>
                         </Border>
                     </ControlTemplate>
                 </Setter.Value>
