--- a/src/Calculator/Views/StandartCalculatorControl.xaml
+++ b/src/Calculator/Views/StandartCalculatorControl.xaml
@@ -13,7 +13,7 @@
                 <Style BasedOn="{StaticResource MemoryButtonStyle}" TargetType="Button"/>
             </Style.Resources>
         </Style>
-        <Style x:Key="NumberButtonsGrid" TargetType="Grid">
+        <Style x:Key="NumberPadGrid" TargetType="Grid">
             <Style.Resources>
                 <Style BasedOn="{StaticResource NumberButtonStyle}" TargetType="Button"/>
             </Style.Resources>
@@ -27,62 +27,82 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="49*"/>
-            <RowDefinition Height="181.3*"/>
+            <!--Display-->
+            <RowDefinition Height="4*"/>
+            <!--Keyboard-->
+            <RowDefinition Height="15*"/>
         </Grid.RowDefinitions>
 
         <!--Display-->
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="25*" MinHeight="25"/>
-                <RowDefinition Height="74*"/>
+                <!--Current expression-->
+                <RowDefinition Height="*"/>
+                <!--Current number-->
+                <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
 
             <!--Current expression-->
-            <TextBlock 
-                Text="0" 
-                Margin="0,0,10,0"
-                Grid.Row="0" 
-                HorizontalAlignment="Right" 
+            <TextBlock
+                Text="0"
+                HorizontalAlignment="Right"
                 VerticalAlignment="Center"
-                FontSize="16" 
-                FontWeight="Bold" 
-                FontFamily="Microsoft JhengHei" 
-                Foreground="#FF4D4D4D"/>
+                FontFamily="{StaticResource CalcMDL2}"
+                FontSize="14"
+                Margin="0,0,13,0"
+                Foreground="{StaticResource CurrentExpression.Static.Foreground}"/>
 
             <!--Current number-->
-            <TextBlock 
-                Text="0" 
-                Margin="0,0,10,0"
-                Grid.Row="1" 
-                HorizontalAlignment="Right" 
-                FontSize="43" 
-                FontWeight="Bold" 
-                FontFamily="Microsoft JhengHei"/>
+            <Viewbox Grid.Row="1" HorizontalAlignment="Right" VerticalAlignment="Top">
+                <TextBox 
+                    Text="0"
+                    IsReadOnly="True"
+                    FontFamily="Microsoft JhengHei"
+                    FontWeight="Bold"
+                    BorderThickness="0"
+                    Background="{StaticResource CurrentNumber.Static.Background}"/>
+            </Viewbox>
         </Grid>
 
         <!--Keyboard-->
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
-                <RowDefinition MaxHeight="60"/>
-                <RowDefinition Height="10*"/>
+                <!--Memory buttons-->
+                <RowDefinition Height="20*"/>
+                <!--Main keyboard-->
+                <RowDefinition Height="191*"/>
             </Grid.RowDefinitions>
 
             <!--Memory buttons-->
             <Grid Style="{StaticResource MemoryButtonsGrid}">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+                    <!--Basic operations for memory work-->
+                    <ColumnDefinition Width="600*" MaxWidth="400"/>
+                    <!--Separation column-->
+                    <ColumnDefinition Width="*"/>
+                    <!--Memory history-->
+                    <ColumnDefinition Width="120*" MaxWidth="80"/>
                 </Grid.ColumnDefinitions>
 
-                <Button Content="MC" Command="" Grid.Column="0"/>
-                <Button Content="MR" Command="" Grid.Column="1"/>
-                <Button Content="M+" Command="" Grid.Column="2"/>
-                <Button Content="M-" Command="" Grid.Column="3"/>
-                <Button Content="MS" Command="" Grid.Column="4"/>
+                <!--Basic operations for memory work-->
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+
+                    <Button Content="MC" Command="" Grid.Column="0"/>
+                    <Button Content="MR" Command="" Grid.Column="1"/>
+                    <Button Content="M+" Command="" Grid.Column="2"/>
+                    <Button Content="M-" Command="" Grid.Column="3"/>
+                    <Button Content="MS" Command="" Grid.Column="4"/>
+                </Grid>
+
+                <!--Memory history-->
+                <Button IsEnabled="False" Content="Mˇ" Command="" Grid.Column="2"/>
             </Grid>
 
             <!--Main keyboard-->
@@ -103,7 +123,7 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <!--#region Additional operation buttons-->
+                <!--#region Additional operations-->
                 <Button Content="%" Command="" Grid.Column="0" Grid.Row="0"/>
                 <Button Content="CE" Command="" Grid.Column="1" Grid.Row="0"/>
                 <Button Content="C" Command="" Grid.Column="2" Grid.Row="0"/>
@@ -113,18 +133,18 @@
                 <Button Content="√x" Command="" Grid.Column="2" Grid.Row="1"/>
                 <!--#endregion -->
 
-                <!--#region Arithmetic operation buttons-->
+                <!--#region Arithmetic operations-->
                 <Button Content="÷" Command="" Grid.Column="3" Grid.Row="1" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
                 <Button Content="×" Command="" Grid.Column="3" Grid.Row="2" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
                 <Button Content="‒" Command="" Grid.Column="3" Grid.Row="3" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
                 <Button Content="+" Command="" Grid.Column="3" Grid.Row="4" Style="{StaticResource ArithmeticOperationButtonStyle}"/>
                 <!--#endregion -->
-                
+
                 <!--Result button-->
                 <Button Content="=" Command="" Grid.Column="3" Grid.Row="5" Style="{StaticResource ResultButtonStyle}"/>
 
-                <!--Number buttons-->
-                <Grid Grid.Row="2" Grid.ColumnSpan="3" Grid.RowSpan="4" Style="{StaticResource NumberButtonsGrid}">
+                <!--Number pad-->
+                <Grid Grid.Row="2" Grid.ColumnSpan="3" Grid.RowSpan="4" Style="{StaticResource NumberPadGrid}">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
                         <ColumnDefinition/>
