Rewritten the MainWindowViewModel
- Now the MainWindowViewModel object is not created in MainWindow.xaml.cs;
- Added more comments to the code.

--- a/src/Calculator/Views/MainWindow.xaml
+++ b/src/Calculator/Views/MainWindow.xaml
@@ -16,6 +16,10 @@
         WindowStyle="None"
         WindowStartupLocation="CenterScreen">
 
+    <Window.DataContext>
+        <vm:MainWindowViewModel/>
+    </Window.DataContext>
+    
     <WindowChrome.WindowChrome>
         <WindowChrome
             ResizeBorderThickness="{Binding ResizeBorderThickness}"
